// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Header container should match the snapshot for day 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    location={
        Object {
            "pathname": "/day",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="app-title"
          replace={false}
          to="/"
>
          HOCKEY LINE-UP
</Link>,
        <br />,
        <div
          className="select-boxes"
>
          <input
                    className="date-selector"
                    id="date"
                    min="2017-10-04"
                    name="day"
                    onChange={[Function]}
                    type="date"
          />
</div>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "HOCKEY LINE-UP",
          "className": "app-title",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": "HOCKEY LINE-UP",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="date-selector"
            id="date"
            min="2017-10-04"
            name="day"
            onChange={[Function]}
            type="date"
/>,
          "className": "select-boxes",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "date-selector",
            "id": "date",
            "min": "2017-10-04",
            "name": "day",
            "onChange": [Function],
            "type": "date",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="app-title"
            replace={false}
            to="/"
>
            HOCKEY LINE-UP
</Link>,
          <br />,
          <div
            className="select-boxes"
>
            <input
                        className="date-selector"
                        id="date"
                        min="2017-10-04"
                        name="day"
                        onChange={[Function]}
                        type="date"
            />
</div>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "HOCKEY LINE-UP",
            "className": "app-title",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "HOCKEY LINE-UP",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="date-selector"
              id="date"
              min="2017-10-04"
              name="day"
              onChange={[Function]}
              type="date"
/>,
            "className": "select-boxes",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "date-selector",
              "id": "date",
              "min": "2017-10-04",
              "name": "day",
              "onChange": [Function],
              "type": "date",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header Header container should match the snapshot for home 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    location={
        Object {
            "pathname": "/",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="app-title"
          replace={false}
          to="/"
>
          HOCKEY LINE-UP
</Link>,
        <br />,
        <div
          className="select-boxes"
/>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "HOCKEY LINE-UP",
          "className": "app-title",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": "HOCKEY LINE-UP",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": null,
          "className": "select-boxes",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="app-title"
            replace={false}
            to="/"
>
            HOCKEY LINE-UP
</Link>,
          <br />,
          <div
            className="select-boxes"
/>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "HOCKEY LINE-UP",
            "className": "app-title",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "HOCKEY LINE-UP",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": null,
            "className": "select-boxes",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header Header container should match the snapshot for month 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    location={
        Object {
            "pathname": "/month",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="app-title"
          replace={false}
          to="/"
>
          HOCKEY LINE-UP
</Link>,
        <br />,
        <div
          className="select-boxes"
>
          <input
                    className="date-selector"
                    id="month"
                    min="2017-10"
                    name="month"
                    onChange={[Function]}
                    type="month"
          />
</div>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "HOCKEY LINE-UP",
          "className": "app-title",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": "HOCKEY LINE-UP",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="date-selector"
            id="month"
            min="2017-10"
            name="month"
            onChange={[Function]}
            type="month"
/>,
          "className": "select-boxes",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "date-selector",
            "id": "month",
            "min": "2017-10",
            "name": "month",
            "onChange": [Function],
            "type": "month",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="app-title"
            replace={false}
            to="/"
>
            HOCKEY LINE-UP
</Link>,
          <br />,
          <div
            className="select-boxes"
>
            <input
                        className="date-selector"
                        id="month"
                        min="2017-10"
                        name="month"
                        onChange={[Function]}
                        type="month"
            />
</div>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "HOCKEY LINE-UP",
            "className": "app-title",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "HOCKEY LINE-UP",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="date-selector"
              id="month"
              min="2017-10"
              name="month"
              onChange={[Function]}
              type="month"
/>,
            "className": "select-boxes",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "date-selector",
              "id": "month",
              "min": "2017-10",
              "name": "month",
              "onChange": [Function],
              "type": "month",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header Header container should match the snapshot for week 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    location={
        Object {
            "pathname": "/week",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="app-title"
          replace={false}
          to="/"
>
          HOCKEY LINE-UP
</Link>,
        <br />,
        <div
          className="select-boxes"
>
          <input
                    className="date-selector"
                    id="week"
                    min="2017-10-04"
                    name="week"
                    onChange={[Function]}
                    type="week"
          />
</div>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "HOCKEY LINE-UP",
          "className": "app-title",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": "HOCKEY LINE-UP",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "br",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <input
            className="date-selector"
            id="week"
            min="2017-10-04"
            name="week"
            onChange={[Function]}
            type="week"
/>,
          "className": "select-boxes",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "date-selector",
            "id": "week",
            "min": "2017-10-04",
            "name": "week",
            "onChange": [Function],
            "type": "week",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="app-title"
            replace={false}
            to="/"
>
            HOCKEY LINE-UP
</Link>,
          <br />,
          <div
            className="select-boxes"
>
            <input
                        className="date-selector"
                        id="week"
                        min="2017-10-04"
                        name="week"
                        onChange={[Function]}
                        type="week"
            />
</div>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "HOCKEY LINE-UP",
            "className": "app-title",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": "HOCKEY LINE-UP",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <input
              className="date-selector"
              id="week"
              min="2017-10-04"
              name="week"
              onChange={[Function]}
              type="week"
/>,
            "className": "select-boxes",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "date-selector",
              "id": "week",
              "min": "2017-10-04",
              "name": "week",
              "onChange": [Function],
              "type": "week",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
